tests/invalid/unicode1.m
:- module unicode1.

:- interface.

:- type '\uabxy' == int.
